Excess folders have been removed

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form action="/api/v1/register" method="post">
+    <form action="/register" method="post">
         <div>
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
@@ -23,7 +23,7 @@
         <button type="submit">Register</button>
     </form>
 
-    <a href="/views/login">Login</a>
+    <a href="/views/login.ejs">Login</a>
 
 </body>
 </html>
